parkrun-stats - Refactor WebpageProvider into all Parsers.